# My_MLIR_Tutorial

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp  PolyToStandard.h  PolyToStandard.td
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyPatterns.td  PolyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  CMakeLists.txt  Passes.h  Passes.td
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  Passes.h  Passes.td
tests/: .lit_test_times.txt  lit.cfg.py
tests/Ch02/: lower_ctlz.mlir
tests/Ch02/my_tests/: .lit_test_times.txt  test_ctlz.mlir  test_exec.mlir
tests/Ch02/my_tests/Output/: test_ctlz.mlir.script  test_exec.mlir.script
tests/Ch03/: affine_loop_unroll.mlir  fail_unrolling.mlir  sum_buffer.mlir
tests/Ch04/: test.mlir
tests/Ch05/: poly_syntax.mlir
tests/Ch07/: poly_canonicalize.mlir  poly_fold.mlir  sccp_test.mlir
tests/Ch07/Output/: poly_fold.mlir.script  sccp.mlir.script
tests/Ch10/: poly_to_standard.mlir
tools/: CMakeLists.txt
tools/tutorial-opt/: CMakeLists.txt  tutorial-opt.cpp
